--- a/app/views/admin/shared/_footer.html.erb
+++ b/app/views/admin/shared/_footer.html.erb
@@ -1,11 +1,7 @@
-<footer class="footer">
+<footer class="footer mt-auto py-4 bg-light">
   <div class="container">
-    <div class="row">
-      <div class="col">
-        <span class="text">
-           Coronalytics © 2022 — SRAG and Coronavirus Data
-        </span>
-      </div>
-    </div>
+    <span class="text">
+       Coronalytics © 2022 — SRAG and Coronavirus Data
+    </span>
   </div>
 </footer>
