--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html class="h-100">
   <head>
     <title>Coronalytics Admin</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <script src="https://use.fontawesome.com/917347a00c.js"></script>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= stylesheet_link_tag "admin", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "bootstrap" %>
     <%= javascript_include_tag "jquery" %>
+    <%= javascript_include_tag "notifybar" %>
   </head>
 
-  <body>
+  <body class="d-flex flex-column h-100">
     <%= render 'admin/shared/header' %>
 
-    <main class="main">
+    <main class="main mb-4">
       <div class="container">
         <div class="row">
           <div class="col">
@@ -24,6 +26,16 @@
         </div>
       </div>
     </main>
+
+    <script type="text/javascript">
+      $(function() {
+          <% flash.each do |type, msg| %>
+            <% if type == "notice" then %>
+              notifySuccess("<%= msg %>")
+            <% end %>
+          <% end %>
+      });
+    </script>
 
     <%= render "admin/shared/footer" %>
   </body>
