--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -12,6 +12,7 @@
     <%= javascript_include_tag "bootstrap" %>
     <%= javascript_include_tag "jquery" %>
     <%= javascript_include_tag "notifybar" %>
+    <%= javascript_include_tag "sweetalert" %>
   </head>
 
   <body class="d-flex flex-column h-100">
