--- a/lib/assets/stylesheets/notifybar.css
+++ b/lib/assets/stylesheets/notifybar.css
@@ -44,7 +44,7 @@
 
 /* Style for errors */
 .jquery-notify-bar.error {
-  color:#d00;
+  color:#842029;
   background-color:#fdd;
   border-bottom-color: #e6c7c7;
 }
