--- a/app/views/layouts/admin_login.html.erb
+++ b/app/views/layouts/admin_login.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Coronalytics Activation</title>
+    <title>Coronalytics Login</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
