Add vaccination number listing

--- a/app/views/admin/shared/_header.html.erb
+++ b/app/views/admin/shared/_header.html.erb
@@ -20,6 +20,11 @@
               <%= t 'menu.users' %>
             </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="<%= admin_vaccination_numbers_path %>">
+              <%= t 'menu.vaccination_numbers' %>
+            </a>
+          </li>
         </ul>
 
         <div class="d-flex">
