Add srag files module

--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -6,4 +6,4 @@
   try to gain insight about how the vaccination program is doing overall.
 </p>
 <br/>
-<p>Go to <a href="#">SRAG</a> and add a new entry to start the magic</p>
+<p>Go to <%= link_to 'SRAG', admin_srags_path %> and add a new entry to start the magic</p>
