--- a/app/views/admin/shared/_header.html.erb
+++ b/app/views/admin/shared/_header.html.erb
@@ -25,6 +25,11 @@
               <%= t 'menu.vaccination_numbers' %>
             </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="<%= admin_srags_path %>">
+              <%= t 'menu.srags' %>
+            </a>
+          </li>
         </ul>
 
         <div class="d-flex">
