--- a/app/views/admin/srags/index.html.erb
+++ b/app/views/admin/srags/index.html.erb
@@ -31,12 +31,19 @@
           </code>
         </td>
         <td>
-          <em>CREATED</em>
+          <em><%= s.status %></em>
         </td>
         <td>
-          <a class="btn btn-primary btn-sm">
-            Process File  <i class="fa fa-download"></i>
-          </a>
+          <%= form_tag(admin_process_srag_path(s), method: "POST", class: 'frm') do %>
+            <div class="btn-group btn-group-sm">
+              <a class="btn btn-primary" href="#">
+                <i class="fa fa-edit"></i> Edit
+              </a>
+              <button type="submit" class="btn btn-dark" <%= 'disabled' if s.status != 'CREATED' %>>
+                Process File  <i class="fa fa-download"></i>
+              </button>
+            </div>
+          <% end %>
         </td>
       </tr>
     <% end %>
